ENH:  Tractography KW and Qt module use Logic library
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11885 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Tractography/FiducialSeeding/CMakeLists.txt
+++ b/Modules/Tractography/FiducialSeeding/CMakeLists.txt
@@ -24,6 +24,8 @@ include_directories(
   ${CMAKE_CURRENT_BINARY_DIR}
   ${Slicer3_Libs_INCLUDE_DIRS}
   ${Slicer3_Base_INCLUDE_DIRS}
+  ${SlicerTractographyLogic_SOURCE_DIR}
+  ${SlicerTractographyLogic_BINARY_DIR}
   )
 
 configure_file(
