--- a/QTModules/TractographyFiducialSeeding/CMakeLists.txt
+++ b/QTModules/TractographyFiducialSeeding/CMakeLists.txt
@@ -3,6 +3,15 @@ SET(qt_module_name "TractographyFiducialSeeding")
 
 SET(qt_module_export_directive "Q_SLICER_QTMODULES_TRACTOGRAPHYFIDUCIALSEEDING_EXPORT")
 
+SET(qt_module_include_directories
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_BINARY_DIR}
+  ${Slicer3_Libs_INCLUDE_DIRS}
+  ${Slicer3_Base_INCLUDE_DIRS}
+  ${SlicerTractographyLogic_SOURCE_DIR}
+  ${SlicerTractographyLogic_BINARY_DIR}
+  )
+
 # Source files
 SET(qt_module_SRCS
   qSlicerTractographyFiducialSeedingModule.cxx
@@ -38,6 +47,7 @@ Slicer3_build_qtmodule(
   NAME ${qt_module_name}
   TITLE TractographyFiducialSeeding
   EXPORT_DIRECTIVE ${qt_module_export_directive}
+  INCLUDE_DIRECTORIES ${qt_module_include_directories}
   SRCS ${qt_module_SRCS}
   MOC_SRCS ${qt_module_MOC_SRCS}
   UI_SRCS ${qt_module_UI_SRCS}
