ENH:  Volumes module use Tractography/Logic library
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11889 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Volumes/CMakeLists.txt
+++ b/Modules/Volumes/CMakeLists.txt
@@ -24,6 +24,8 @@ include_directories(
   ${CMAKE_CURRENT_BINARY_DIR}
   ${CommandLineModule_SOURCE_DIR}
   ${CommandLineModule_BINARY_DIR}
+  ${SlicerTractographyLogic_SOURCE_DIR}
+  ${SlicerTractographyLogic_BINARY_DIR}
   ${SlicerTractographyFiducialSeeding_SOURCE_DIR}
   ${SlicerTractographyFiducialSeeding_BINARY_DIR}
   ${SlicerTractographyDisplay_SOURCE_DIR}
