COMP: Update the messages printed by Slicer3FindQT and Designer/CMakeLists.txt
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11894 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Utilities/Designer/CMakeLists.txt
+++ b/Utilities/Designer/CMakeLists.txt
@@ -29,7 +29,7 @@ IF(CMAKE_CONFIGURATION_TYPES)
     FILE(COPY ${CMAKE_CURRENT_BINARY_DIR}/Designer.py
       DESTINATION ${designer_launcher_directory}
       FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ WORLD_READ)
-    MESSAGE(STATUS "Configuring Designer launcher: "${designer_launcher})
+    MESSAGE(STATUS "Configuring Qt Designer launcher: "${designer_launcher})
   ENDFOREACH(config)
   
 ELSE(CMAKE_CONFIGURATION_TYPES)
@@ -44,6 +44,6 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
   FILE(COPY ${CMAKE_CURRENT_BINARY_DIR}/Designer.py
     DESTINATION ${designer_launcher_directory}
     FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ WORLD_READ )
-  MESSAGE(STATUS "Configuring Designer launcher: "${designer_launcher})
+  MESSAGE(STATUS "Configuring Qt Designer launcher: "${designer_launcher})
   
 ENDIF(CMAKE_CONFIGURATION_TYPES)
