--- a/Modules/Tractography/CMakeLists.txt
+++ b/Modules/Tractography/CMakeLists.txt
@@ -16,8 +16,10 @@ if(NOT Slicer3_SOURCE_DIR)
 endif(NOT Slicer3_SOURCE_DIR)
 
 # --------------------------------------------------------------------------
+
+# Warning - Do not include Logic subdirectory - This has been done in Slicer3/CMakeLists.txt
+
 SET(Tractography_libs
-  Logic
   Seeding
   Settings
   Display
