--- a/QTModules/TractographyFiducialSeeding/CMakeLists.txt
+++ b/QTModules/TractographyFiducialSeeding/CMakeLists.txt
@@ -3,13 +3,10 @@ SET(qt_module_name "TractographyFiducialSeeding")
 
 SET(qt_module_export_directive "Q_SLICER_QTMODULES_TRACTOGRAPHYFIDUCIALSEEDING_EXPORT")
 
+# Additional includes (Current_{source,binary} and Slicer3_{Libs,Base} already included)
 SET(qt_module_include_directories
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  ${CMAKE_CURRENT_BINARY_DIR}
-  ${Slicer3_Libs_INCLUDE_DIRS}
-  ${Slicer3_Base_INCLUDE_DIRS}
-  ${SlicerTractographyLogic_SOURCE_DIR}
-  ${SlicerTractographyLogic_BINARY_DIR}
+  ${vtkSlicerTractographyModuleLogic_SOURCE_DIR}
+  ${vtkSlicerTractographyModuleLogic_BINARY_DIR}
   )
 
 # Source files
@@ -32,10 +29,7 @@ SET(qt_module_UI_SRCS
 
 # Additional Target libraries
 SET(qt_module_target_libraries
-  #${KWWidgets_LIBRARIES}
-  #${ITK_LIBRARIES}
-  #CommandLineModule
-  SlicerTractographyLogic
+  vtkSlicerTractographyModuleLogic
   )
 
 # Resources
