BUG: Removed hard coded paths to ITK, ModuleDescriptionParser, and TCLAP from GenerateCLP installation configuration vars.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11908 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/GenerateCLP/CMakeLists.txt
+++ b/Libs/GenerateCLP/CMakeLists.txt
@@ -68,7 +68,7 @@ else(WIN32)
   set(GenerateCLP_FORWARD_PATH_BUILD 
     "\"${GenerateCLP_FORWARD_DIR_BUILD}\",\"${ITK_DIR}/bin\"")
   set(GenerateCLP_FORWARD_PATH_INSTALL
-    "\"../lib/GenerateCLP\",\"../lib/InsightToolkit\",\"../lib/ModuleDescriptionParser\"")
+    "\"${GenerateCLP_DIR}\",\"${ITK_DIR}\",\"${ModuleDescriptionParser_DIR}\"")
 endif(WIN32)
 set(GenerateCLP_FORWARD_EXE GenerateCLP)
 
