--- a/Libs/GenerateCLP/GenerateCLPInstallConfig.cmake.in
+++ b/Libs/GenerateCLP/GenerateCLPInstallConfig.cmake.in
@@ -16,6 +16,7 @@ if(NOT WIN32)
 endif(NOT WIN32)
 set(GENERATECLP_EXE "${GENERATECLP_EXE}${__EXE_EXT}")
 get_filename_component(GENERATECLP_EXE "${GENERATECLP_EXE}" ABSOLUTE) 
-set(TCLAP_DIR "${GenerateCLP_CONFIG_DIR}/../tclap")
-set(ModuleDescriptionParser_DIR "${GenerateCLP_CONFIG_DIR}/../ModuleDescriptionParser")
-set(ITK_DIR "${GenerateCLP_CONFIG_DIR}/../InsightToolkit")
+set(TCLAP_DIR "@TCLAP_DIR@")
+set(ModuleDescriptionParser_DIR "@ModuleDescriptionParser_DIR@")
+set(ITK_DIR "@ITK_DIR@")
+
