BUG: Removed hard-coded paths to ITK from installation configuration vars
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11909 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/ModuleDescriptionParser/ModuleDescriptionParserInstallConfig.cmake.in
+++ b/Libs/ModuleDescriptionParser/ModuleDescriptionParserInstallConfig.cmake.in
@@ -16,4 +16,4 @@ set(ModuleDescriptionParser_USE_FILE
   "${ModuleDescriptionParser_CONFIG_DIR}/UseModuleDescriptionParser.cmake"
   )
 
-set(ITK_DIR "${ModuleDescriptionParser_CONFIG_DIR}/../InsightToolkit")
+set(ITK_DIR "@ITK_DIR@")
