COMP: CMakeLists.txt - Loop though the Modules/XXX/Logic only if Slicer is build with Slicer3_USE_KWWIDGETS OFF
That means that the Logic subdirectory should be included in the CMakeLists.txt
specigic to the Module.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@11913 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Tractography/CMakeLists.txt
+++ b/Modules/Tractography/CMakeLists.txt
@@ -17,9 +17,8 @@ endif(NOT Slicer3_SOURCE_DIR)
 
 # --------------------------------------------------------------------------
 
-# Warning - Do not include Logic subdirectory - This has been done in Slicer3/CMakeLists.txt
-
 SET(Tractography_libs
+  Logic
   Seeding
   Settings
   Display
