COMP: SlicerQT - For now, launcher 'Slicer3' (based on startkits) is also configured if Slicer3_USE_KWWidgets is OFF.
Required to be able to run SlicerQT on a windows build.
./slicer3 --launch SlicerQT

Some test also expect the launcher 'Slicer3' to be present. (for example VTKITKReader)
On windows, the launcher is mandatory to run the test.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@11916 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/GUI/CMakeLists.txt
+++ b/Applications/GUI/CMakeLists.txt
@@ -78,7 +78,7 @@ if(Slicer3_NEED_SHARED_FORWARD)
       @ONLY IMMEDIATE)
     add_executable(${slicer_exe} WIN32
       ${CMAKE_CURRENT_BINARY_DIR}/${slicer_exe}-forward.c)
-    add_dependencies(${slicer_exe} ${slicer_exe}${Slicer3_EXE_SUFFIX})
+    add_dependencies(${slicer_exe} ${Slicer3_FORWARD_EXE})
     install(TARGETS ${slicer_exe}
       DESTINATION ${Slicer3_INSTALL_BIN_DIR}
       COMPONENT Runtime)
