COMP: BUILDNAME shouldn't be discover pragmatically ...
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11919 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,11 +159,11 @@ OPTION(BUILD_TESTING "Test the project" ON)
 SET(Slicer3_BUILD_TESTING ${BUILD_TESTING})
 SET(LAUNCH_EXE ${Slicer3_BINARY_DIR}/Slicer3 --launch)
 IF(Slicer3_BUILD_TESTING)
-  IF (NOT BUILDNAME)
-    SET(BUILDNAME "${Slicer3_BUILD}" CACHE STRING "Name of build on the dashboard")
-  ELSE()
-    SET(BUILDNAME "${BUILDNAME}" CACHE STRING "Name of build on the dashboard")
-  ENDIF()
+  #IF (NOT BUILDNAME)
+  #  SET(BUILDNAME "${Slicer3_BUILD}" CACHE STRING "Name of build on the dashboard")
+  #ELSE()
+  #  SET(BUILDNAME "${BUILDNAME}" CACHE STRING "Name of build on the dashboard")
+  #ENDIF()
   ENABLE_TESTING()
   INCLUDE(CTest)
   SET(CXX_TEST_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
