ENH: SlicerQt - add a new class - qMRMLSceneFactoryWidget - that combines qMRMLSceneGeneratorButton with qMRMLNodeFactoryButton. The new widget contains buttons to create/delete a vtkMRMLScene and create/delete vtkMRMLNodes. qMRMLSceneFactoryWidget main purpose is to test other qMRMLWidgets, in the Designer (clicking on the buttons) or in unit tests (by calling slots directly).
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11938 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -37,6 +37,8 @@ SET(qMRMLWidgets_SRCS
   qMRMLNodeTreeSelector.h
   qMRMLSceneGeneratorButton.cxx
   qMRMLSceneGeneratorButton.h
+  qMRMLSceneFactoryWidget.cxx
+  qMRMLSceneFactoryWidget.h
   qMRMLSceneModel.cxx
   qMRMLSceneModel.h
   qMRMLTransformProxyModel.cxx
@@ -63,6 +65,7 @@ SET(qMRMLWidgets_MOC_SRCS
   qMRMLNodeFactoryButton.h
   qMRMLNodeSelector.h
   qMRMLNodeTreeSelector.h
+  qMRMLSceneFactoryWidget.h
   qMRMLSceneGeneratorButton.h
   qMRMLSceneModel.h
   qMRMLTransformProxyModel.h
@@ -74,8 +77,9 @@ SET(qMRMLWidgets_MOC_SRCS
   
 # UI files
 SET(qMRMLWidgets_UI_SRCS
-  Resources/UI/qMRMLTransformSliders.ui
   Resources/UI/qMRMLEventLoggerWidget.ui
+  Resources/UI/qMRMLSceneFactoryWidget.ui
+  Resources/UI/qMRMLTransformSliders.ui
 )
   
 QT4_WRAP_CPP(qMRMLWidgets_SRCS ${qMRMLWidgets_MOC_SRCS})
