--- a/Libs/qMRMLWidgets/Testing/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/Testing/CMakeLists.txt
@@ -11,6 +11,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   qMRMLNodeFactoryTest1.cxx
   qMRMLNodeSelectorTest1.cxx
   qMRMLNodeTreeSelectorTest1.cxx
+  qMRMLSceneFactoryWidgetTest1.cxx
   qMRMLSceneGeneratorButtonTest1.cxx
   qMRMLSceneModelTest1.cxx
   qMRMLTransformProxyModelTest1.cxx
@@ -47,6 +48,7 @@ SIMPLE_TEST( qMRMLNodeFactoryButtonTest1 )
 SIMPLE_TEST( qMRMLNodeFactoryTest1 )
 SIMPLE_TEST( qMRMLNodeSelectorTest1 )
 SIMPLE_TEST( qMRMLNodeTreeSelectorTest1 )
+SIMPLE_TEST( qMRMLSceneFactoryWidgetTest1 )
 SIMPLE_TEST( qMRMLSceneGeneratorButtonTest1 )
 SIMPLE_TEST( qMRMLSceneModelTest1 )
 SIMPLE_TEST( qMRMLTransformProxyModelTest1 )
