ENH: CLI module MRIBiasFieldCorrection. Code ported from Modules directory and cleaned
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11944 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -637,6 +637,7 @@ set( Slicer3_EXE ${Slicer3_BINARY_DIR}/Slicer3 )
 ###################
 
 SET(cli_modules
+  MRIBiasFieldCorrection
   SparseFieldLevelSetContour
   Realign
   DiffusionApplications
