--- a/Modules/ChangeTracker/CMakeLists.txt
+++ b/Modules/ChangeTracker/CMakeLists.txt
@@ -79,7 +79,7 @@ set(ChangeTracker_SRCS
 # Enders work 
 SET(changetracker_libs
   DeformableMetric
-  CommandLineApplication
+  CommandLineApplicationNew
   )
 FOREACH(lib ${changetracker_libs})
   ADD_SUBDIRECTORY(${lib})
