BUG: revert accidental commit
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11948 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ChangeTracker/CMakeLists.txt
+++ b/Modules/ChangeTracker/CMakeLists.txt
@@ -79,7 +79,7 @@ set(ChangeTracker_SRCS
 # Enders work 
 SET(changetracker_libs
   DeformableMetric
-  CommandLineApplicationNew
+  CommandLineApplication
   )
 FOREACH(lib ${changetracker_libs})
   ADD_SUBDIRECTORY(${lib})
