ENH: use a templated function to handle arbitrary input scalar type. Add converters to and from VTK
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11954 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/MRIBiasFieldCorrection/CMakeLists.txt
+++ b/Applications/CLI/MRIBiasFieldCorrection/CMakeLists.txt
@@ -52,7 +52,10 @@ slicer3_set_plugins_output_path (${PROJECT_NAME}Module)
 set_target_properties (${PROJECT_NAME}Module PROPERTIES
   COMPILE_FLAGS "-Dmain=ModuleEntryPoint")
 
-target_link_libraries (${PROJECT_NAME}Module ITKIO ITKStatistics)
+target_link_libraries (${PROJECT_NAME}Module
+  ITKIO
+  ITKStatistics
+  ITKBasicFilters)
 
 
 #-----------------------------------------------------------------------------
