ENH: add options for alternate bias field correction methods
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11955 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/MRIBiasFieldCorrection/CMakeLists.txt
+++ b/Applications/CLI/MRIBiasFieldCorrection/CMakeLists.txt
@@ -55,7 +55,9 @@ set_target_properties (${PROJECT_NAME}Module PROPERTIES
 target_link_libraries (${PROJECT_NAME}Module
   ITKIO
   ITKStatistics
-  ITKBasicFilters)
+  ITKBasicFilters
+  vtkIO
+  vtkImaging)
 
 
 #-----------------------------------------------------------------------------
