--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -40,6 +40,7 @@ SET(slicer_qtbase_MOC_SRCS
 # UI files
 SET(slicer_qtbase_UI_SRCS
   Resources/UI/qSlicerModuleSelectorWidget.ui
+  Resources/UI/qSlicerModulePanel.ui
 )
 
 # Additional Target libraries (QT libs already included)
