ENH: SlicerQt - add qCTKMenuButton that is like a QPushButton but shows up the QMenu only when clicked on the indicator.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11963 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -48,6 +48,8 @@ SET(qCTKWidgets_SRCS
   qCTKFlowLayout.h
   qCTKMatrixWidget.cxx
   qCTKMatrixWidget.h
+  qCTKMenuButton.cxx
+  qCTKMenuButton.h
   qCTKModelTester.cxx
   qCTKModelTester.h
   qCTKNumericInput.cxx
@@ -70,6 +72,7 @@ SET(qCTKWidgets_MOC_SRCS
   qCTKDoubleSlider.h
   qCTKFittedTextBrowser.h
   qCTKMatrixWidget.h
+  qCTKMenuButton.h
   qCTKModelTester.h
   qCTKNumericInput.h
   qCTKSliderSpinBoxWidget.h
