COMP: try to silence warnings from visual studio on nightly clean buildss
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11965 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -76,4 +76,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
 
   # Libs/OpenIGTLink
   "(OpenIGTLink|openigtlink).[Ss]ource.igtl*"
+  
+  # Visual studio spurious warnings...
+  "The following environment variables were not found"
 )
