ENH: SlicerQT - Added qCTKSettings - Wrapper around QSettings providing convenient function to save app settings. (imported from Paraview)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11980 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -54,6 +54,8 @@ SET(qCTKWidgets_SRCS
   qCTKModelTester.h
   qCTKNumericInput.cxx
   qCTKNumericInput.h
+  qCTKSettings.cxx
+  qCTKSettings.h
   qCTKSliderSpinBoxWidget.cxx
   qCTKSliderSpinBoxWidget.h
   qCTKTitleComboBox.cxx
@@ -75,6 +77,7 @@ SET(qCTKWidgets_MOC_SRCS
   qCTKMenuButton.h
   qCTKModelTester.h
   qCTKNumericInput.h
+  qCTKSettings.h
   qCTKSliderSpinBoxWidget.h
   qCTKTitleComboBox.h
   qCTKTreeComboBox.h
