ENH: SlicerQT - Added qCTKUtils - Utility class
Added function: stringListToArray - allowing to convert a QStringList to std::vector<char*>

Use:
 vector<char*> myargv;
 qCTKUtils::stringListToArray(QApplication::application()->arguments(), myargv);
 char** array = &myargv[0];

git-svn-id: http://svn.slicer.org/Slicer3/trunk@11982 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -62,6 +62,8 @@ SET(qCTKWidgets_SRCS
   qCTKTitleComboBox.h
   qCTKTreeComboBox.cxx
   qCTKTreeComboBox.h
+  qCTKUtils.cxx
+  qCTKUtils.h
   )
 
 # Headers that should run through moc
