ENH: SlicerQT - Added vtkConfigureVersion.h.in containing #ifdef related to Slicer version.
It allows to expose the following variable to the code:
  Slicer3_VERSION_MAJOR
  Slicer3_VERSION_MINOR
  Slicer3_VERSION_PATCH
  Slicer3_VERSION
  Slicer3_VERSION_FULL

git-svn-id: http://svn.slicer.org/Slicer3/trunk@11983 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -394,33 +394,43 @@ ENDIF(Slicer3_USE_QT)
 # --------------------------------------------------------------------------
 # Configure and install headers
 
-include_directories(
-  "${CMAKE_CURRENT_SOURCE_DIR}"
-  "${CMAKE_CURRENT_BINARY_DIR}"
-  )
-
-configure_file(
+CONFIGURE_FILE(
   ${CMAKE_CURRENT_SOURCE_DIR}/vtkSlicerConfigure.h.in 
   ${CMAKE_CURRENT_BINARY_DIR}/vtkSlicerConfigure.h
   )
 
-configure_file(
+CONFIGURE_FILE(
+  ${CMAKE_CURRENT_SOURCE_DIR}/vtkSlicerVersionConfigure.h.in 
+  ${CMAKE_CURRENT_BINARY_DIR}/vtkSlicerVersionConfigure.h
+  )
+
+CONFIGURE_FILE(
   ${CMAKE_CURRENT_SOURCE_DIR}/Scripts/runValgrind.sh.in 
   ${CMAKE_CURRENT_BINARY_DIR}/Scripts/runValgrind.sh
   )
 
-configure_file(
+CONFIGURE_FILE(
   ${CMAKE_CURRENT_SOURCE_DIR}/Scripts/computeCodeCoverageLocally.sh.in 
   ${CMAKE_CURRENT_BINARY_DIR}/Scripts/computeCodeCoverageLocally.sh
   )
 
-configure_file(
+CONFIGURE_FILE(
   ${CMAKE_CURRENT_SOURCE_DIR}/Scripts/runExperimentalOffScreen.sh.in 
   ${CMAKE_CURRENT_BINARY_DIR}/Scripts/runExperimentalOffScreen.sh
   )
 
-install(FILES 
+INCLUDE_DIRECTORIES(
+  "${CMAKE_CURRENT_SOURCE_DIR}"
+  "${CMAKE_CURRENT_BINARY_DIR}"
+  )
+
+INSTALL(FILES 
   "${CMAKE_CURRENT_BINARY_DIR}/vtkSlicerConfigure.h"
+  DESTINATION ${Slicer3_INSTALL_INCLUDE_DIR} COMPONENT Development
+  )
+
+INSTALL(FILES 
+  "${CMAKE_CURRENT_BINARY_DIR}/vtkSlicerVersionConfigure.h"
   DESTINATION ${Slicer3_INSTALL_INCLUDE_DIR} COMPONENT Development
   )
 
