ENH: SlicerQT - Added qSlicerCoreCommandOptions and qSlicerCommandOptions
These objects represent a storage for Slicer options.

In class qSlicerCoreCommandOptions, initialize() is adding:
  --disable-cli-module
  --version
  --program-path
  --home


In class qSlicerCommandOptions, initialize() is adding:
  --no-splash

git-svn-id: http://svn.slicer.org/Slicer3/trunk@11985 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/CMakeLists.txt
+++ b/Base/QTCore/CMakeLists.txt
@@ -20,6 +20,8 @@ SET(slicer_qtbase_include_directories
 SET(slicer_qtbase_SRCS
   qSlicerCoreApplication.cxx
   qSlicerCoreApplication.h
+  qSlicerCoreCommandOptions.cxx
+  qSlicerCoreCommandOptions.h
   qSlicerCoreIOManager.cxx
   qSlicerCoreIOManager.h
   qSlicerLoadableModuleFactory.cxx
