--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -20,6 +20,8 @@ SET(slicer_qtbase_SRCS
   qSlicerAbstractModulePanel.h
   qSlicerApplication.cxx
   qSlicerApplication.h
+  qSlicerCommandOptions.cxx
+  qSlicerCommandOptions.h
   qSlicerIOManager.cxx
   qSlicerIOManager.h
   qSlicerModulePanel.cxx
