--- a/QTModules/CMakeLists.txt
+++ b/QTModules/CMakeLists.txt
@@ -18,7 +18,7 @@ INCLUDE(${Slicer3_CMAKE_DIR}/Slicer3QTModuleMacros.cmake)
 
 SET(qtmodules
   SlicerWelcome
-  Volumes
+  #Volumes
   Measurements
   TractographyFiducialSeeding
   )
