COMP: SlicerQT - Updated install rules - QtDesigner plugins are now installed in lib/Slicer3/designer
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11997 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/Plugins/CMakeLists.txt
+++ b/Base/QTGUI/Plugins/CMakeLists.txt
@@ -39,6 +39,6 @@ qctk_build_designer_plugin(
 qctk_install_designer_plugin(
   NAME ${PROJECT_NAME}
   INSTALL_BIN_DIR ${Slicer3_INSTALL_BIN_DIR}
-  INSTALL_LIB_DIR ${Slicer3_INSTALL_LIB_DIR}
+  INSTALL_LIB_DIR ${Slicer3_INSTALL_LIB_DIR}/designer
   INSTALL_HEADERS_DIR ${Slicer3_INSTALL_INCLUDE_DIR}
   )
